--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -23,4 +23,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'customers/customers.scss';
 @import 'main/main.scss';
+@import 'products/products.scss';
 // endinjector
