--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -24,4 +24,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'customers/customers.scss';
 @import 'main/main.scss';
 @import 'products/products.scss';
+@import 'taginator/taginator.scss';
 // endinjector
