--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -23,6 +23,8 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'customers/customers.scss';
 @import 'main/main.scss';
+@import 'orders/orders.scss';
 @import 'products/products.scss';
+@import 'ptoProductSelect/ptoProductSelect.scss';
 @import 'taginator/taginator.scss';
 // endinjector
