--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,9 +21,11 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 // Component styles are injected through grunt
 // injector
+@import 'customerTypes/customerTypes.scss';
 @import 'customers/customers.scss';
 @import 'main/main.scss';
 @import 'orders/orders.scss';
+@import 'productVariants/productVariants.scss';
 @import 'products/products.scss';
 @import 'ptoProductSelect/ptoProductSelect.scss';
 @import 'taginator/taginator.scss';
