--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,28 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
   cursor: pointer;
 }
 
+body {
+  background: #f7f8fa;
+}
+
+.card {
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.card-header {
+  padding: 20px 20px 0;
+}
+
+.card-body {
+  padding: 20px;
+}
+
+.navbar-inverse {
+  background-color: #1a1d28;
+}
+
 // Component styles are injected through grunt
 // injector
 @import 'customerTypes/customerTypes.scss';
