--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -8,6 +8,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
  * App-wide Styles
  */
 
+ // $navbar-inverse-bg: #52517a;
+$ponto-primary: #353299;
+$ponto-dark: #3d3d5b;
+$ponto-medium: #52517a;
+
+$ponto-btn: #329699;
+$ponto-btn-border: #257073;
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -38,7 +46,7 @@ body {
 }
 
 .navbar-inverse {
-  background-color: #1a1d28;
+  background-color: #52517a;
 }
 
 // Component styles are injected through grunt
